--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,10 +1,10 @@
-ul {
+.navigation {
     list-style-type: none;
     margin: 0;
     padding: 0;
   }
 
-  li {
+.navigation  li {
     float: left;
   }
   
